[package]
name = "rpg_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kayak_ui = { git="https://github.com/StarArawn/kayak_ui", features = ["bevy_renderer"] }
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy-inspector-egui = "0.11.0"